# data_eng_test

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
db_fonte/: __init__.py  create_table.py  dataexport_basileia.csv  parse_basileia.py  populate.py
db_fonte/queries/: criar_tabela.sql
etl/: __init__.py  create_tables.py  invoker.py  leitura_exemplo.py
etl/api/: __init__.py  app.py  connexion_fonte.py
etl/api/models/: __init__.py  base_fonte.py  data_fonte.py  data_fonte_schema.py  signals_to_fetch.py
etl/dao/: README.md  __init__.py  base.py  connexion_alvo.py  data.py  signal.py  upsert_method.py
